﻿v1.3.5

Rez Master
* New: Cleric, Added Defiler's Death's Embrace combet res. (Thanks Arisae!)

Phase Monitor
* Change: The Phase Monitor has been adjusted to allow for tracking of multiple units with the same name.

Encounter Checking
* Change: Phase Monitor linking now occurs when a new Encounter Unit is detected.

Unit Tracking
* Change: Units now attempt to activate as idle regardless of their "seen" state. This includes them doing damage, and receiving indirect AoE.
* Change: Units in the Idle state "unseen", should now update their HP values based on Heal/Damage/Death events via UID.
* Note: The above changes directly effect the Plug-in KBM:Add-Watch, and you should now see HP updates for faded (unseen) units in an encounter.

Unit Cache
* Change: Reference Lists for missing UTIDs are compiled fresh each run.

Misc
* New: Add command /kbmability : This will list all abilities available to your character along with their Ability ID.

Rift:Storm Legion

Raids
* Endless Eclipse
** Dread Lord Goloch
** Matriarch of Pestilence
** Progenitor
** Kain the Reaper

* Frozen Tempest
** Gangnum
** Gelidra
** Kolmasveli and Toinenveli
** Zaviel
** Crucia

Slivers
* Triumph of the Dragon Queen
** Grand Falconer Zoles
*** New: UTID updated for Zoles.
*** New: Enrage time added.
*** New: Skyscream Unit added for tracking.
** General Typhiria
** Jultharin
*** New: UTID updated.
*** New: Enrage time added.
** Cyril
*** New: UTID updated.
*** New: Enrage time added.

Expert Dungeons
* Archive of Flesh
** Ahzrius
*** New: UTID updated.
*** New: Alert added for Drastic Renovations.
** Animator Cahail
*** New: UTID updated.
** Emphalea
*** New: UTID updated.
** Tzul
*** New: UTID updated.
** Filth Gorger Vorka
*** New: UTID updated.

* Empyrean Core
** Baird Bringhurst
*** New: UTID updated.
** Kaliban's Bodyguards
*** New: UTID updated for both Bodyguards.
** Core Meltdown
*** New: UTID updated for new Units.
*** Change: Unit changed to Irradiated Monster. 